Fix distorted images

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -69,7 +69,17 @@ a:hover {
 
 .gl-mockups {
   flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 40px;
+}
+.gl-mockups-image {
+  width: 100%;
+  height: 0;
+  padding-top: calc(1002 / 1592 * 100%);
+  background: url('../images/landing-mockups.png') no-repeat;
+  background-size: cover;
 }
 
 .gl-slogans {
@@ -77,11 +87,6 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.gl-mockups-image {
-  width: 100%;
-  height: 100%;
 }
 
 .gl-logon-button {
